--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -29,4 +29,19 @@
     background-image: none !important;
   }
 }
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateX(120%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.animate-slideIn {
+  animation: slideIn 0.4s ease-out;
+}
+
 
